; ModuleID = '/home/carl/AnghaBench/systemd/src/hostname/extr_hostnamed.c_property_get_chassis.c'
source_filename = "/home/carl/AnghaBench/systemd/src/hostname/extr_hostnamed.c_property_get_chassis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8** }

@PROP_CHASSIS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8*, i32*, i8*, i32*)* @property_get_chassis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_get_chassis(i32* %0, i8* %1, i8* %2, i8* %3, i32* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %struct.TYPE_2__*, align 8
  %16 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32* %4, i32** %12, align 8
  store i8* %5, i8** %13, align 8
  store i32* %6, i32** %14, align 8
  %17 = load i8*, i8** %13, align 8
  %18 = bitcast i8* %17 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %18, %struct.TYPE_2__** %15, align 8
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i8**, i8*** %20, align 8
  %22 = load i64, i64* @PROP_CHASSIS, align 8
  %23 = getelementptr inbounds i8*, i8** %21, i64 %22
  %24 = load i8*, i8** %23, align 8
  %25 = call i64 @isempty(i8* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %7
  %28 = call i8* (...) @fallback_chassis()
  store i8* %28, i8** %16, align 8
  br label %36

29:                                               ; preds = %7
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i8**, i8*** %31, align 8
  %33 = load i64, i64* @PROP_CHASSIS, align 8
  %34 = getelementptr inbounds i8*, i8** %32, i64 %33
  %35 = load i8*, i8** %34, align 8
  store i8* %35, i8** %16, align 8
  br label %36

36:                                               ; preds = %29, %27
  %37 = load i32*, i32** %12, align 8
  %38 = load i8*, i8** %16, align 8
  %39 = call i32 @sd_bus_message_append(i32* %37, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* %38)
  ret i32 %39
}

declare dso_local i64 @isempty(i8*) #1

declare dso_local i8* @fallback_chassis(...) #1

declare dso_local i32 @sd_bus_message_append(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
